Fix incorrect renderer kill in PrintPreviewHandler.

Make PrintPreviewHandler remember which preview requests failed. So when
out of order page ready events arrive after the failure due to
compositing, PrintPreviewHandler can figure out those events are safe to
ignore.

BUG=872983

Change-Id: I8b493a9b1efb50112495cf47ab25d1b01897d4c2
Reviewed-on: https://chromium-review.googlesource.com/1170228
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582772}