chrome/browser/ui/webui/print_preview/print_preview_handler.h
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <map>
 #include <memory>
+#include <set>
 #include <string>
 
 #include "base/files/file_path.h"
@@ -104,7 +105,7 @@ class PrintPreviewHandler
   // Notify the WebUI that the page preview is ready.
   void SendPagePreviewReady(int page_index,
                             int preview_uid,
-                            int preview_response_id);
+                            int preview_request_id);
 
   int regenerate_preview_request_count() const {
     return regenerate_preview_request_count_;
@@ -355,6 +356,9 @@ class PrintPreviewHandler
 
   // Maps preview request ids to callbacks.
   std::map<int, std::string> preview_callbacks_;
+
+  // Set of preview request ids for failed previews.
+  std::set<int> preview_failures_;
 
   base::WeakPtrFactory<PrintPreviewHandler> weak_factory_;
 
